Fix #24512: unset tag operation from MR was not supported
Signed-off-by: Taylor Smock <smocktaylor@gmail.com>